k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: triviahhh-web
  name: triviahhh-web
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: triviahhh-web
  sessionAffinity: None
  type: NodePort
