k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: triviahhh-web
  name: triviahhh-web
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: triviahhh-web
    weight: 100
